examples/test/testpolicy12671.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12671
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key35: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value18
      podSelector:
        matchLabels:
          key28: value29
          key4: value34
          key36: value41
